DAPI-346: prevent the attribute mapping screen to "jump" when a rerender is triggered

--- a/src/Akeneo/Pim/Automation/FranklinInsights/Infrastructure/Symfony/Resources/public/less/attributes-mapping.less
+++ b/src/Akeneo/Pim/Automation/FranklinInsights/Infrastructure/Symfony/Resources/public/less/attributes-mapping.less
@@ -10,6 +10,10 @@
         background-color: white;
     }
 
+    .attribute-mapping-search {
+        height: 46px;
+    }
+
     table.attribute-mapping {
         table-layout: fixed;
 
